--- a/misc/translator/po/es-ES-pref.po
+++ b/misc/translator/po/es-ES-pref.po
@@ -568,6 +568,26 @@ msgstr "No mostrar"
 msgid "cataloguing.pref#AcquisitionDetails# acquisition details on the biblio detail page."
 msgstr "detalles de adquisición en la página de detalle del registro bibliográfico."
 
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Don't show"
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Requires XSLTDetailsDisplay and/or OPACXSLTDetailsDisplay system preferences to be active. Works on MARC21. "
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Show"
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Technical explanation: This enables appending component part records to the bibliographic record data for the XSLT parsing. Component parts need to be indexed in the rcn-index, in which many by default are."
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# component part records in the detailed views. This might cause a performance penalty for records with lots of component part records."
+msgstr ""
+
 # Cataloging > Importing
 msgid "cataloguing.pref#AggressiveMatchOnISBN# When matching on ISBN with the record import tool,"
 msgstr "Cuando se busca coincidencia en un ISBN con la herramienta de importación de registro,"
@@ -1657,8 +1677,8 @@ msgid "circulation.pref#ReservesMaxPickUpDelay# Mark a hold as problematic if it
 msgstr "Marcar una reserva como problemática si ha estado en espera por más de"
 
 # Circulation > Holds Policy
-msgid "circulation.pref#ReservesMaxPickUpDelay# days."
-msgstr "días."
+msgid "circulation.pref#ReservesMaxPickUpDelay# non-holiday days."
+msgstr ""
 
 # Circulation > Holds Policy
 msgid "circulation.pref#ReservesNeedReturns# Automatically"
@@ -2917,6 +2937,10 @@ msgid "i18n_l10n.pref#dateformat# Format dates like"
 msgstr "Formatear fechas como"
 
 # I18N/L10N
+msgid "i18n_l10n.pref#dateformat# dd.mm.yyyy"
+msgstr ""
+
+# I18N/L10N
 msgid "i18n_l10n.pref#dateformat# dd/mm/yyyy"
 msgstr "dd/mm/aaaa"
 
@@ -3163,6 +3187,10 @@ msgstr "No incluir"
 # OPAC > Appearance
 msgid "opac.pref#COinSinOPACResults# Include"
 msgstr "Incluir"
+
+# OPAC > Features
+msgid "opac.pref#CommentModeratorsEmail# The email address where to send a notification (template code COMMENT_CREATED) when a Borrower adds/modifies a review/comment for a Biblio. Set to empty to disable sending email notifications."
+msgstr ""
 
 # OPAC > Appearance
 msgid "opac.pref#DisplayOPACiconsXSLT# Don't show"
@@ -5239,6 +5267,14 @@ msgstr "Procesar hasta"
 # Tools
 msgid "tools.pref#MaxItemsForBatch# items in a single modification or deletion batch."
 msgstr "ítems en una sola modificación o supresión por lotes."
+
+# Tools
+msgid "tools.pref#claimingFines# Set the fine for the 1st, 2nd and 3rd overdue notifications. Separated by |, eg. <strong>3|3|7</strong>"
+msgstr ""
+
+# Tools
+msgid "tools.pref#claimlettertemplate# The absolute path to the .odt-file used as a template for claim letters. Defaults to $KOHA_PATH/misc/claimlettertemplate.odt"
+msgstr ""
 
 # Web services
 msgid "web_services.pref"
