--- a/misc/translator/po/fi-FI-pref.po
+++ b/misc/translator/po/fi-FI-pref.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
-"Last-Translator: Pasi Kallinen <pasi.kallinen@pttk.fi>\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Koha Translate List <koha-translate@lists.koha-community.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -565,6 +565,26 @@ msgstr "Älä näytä"
 # Cataloging > Display
 msgid "cataloguing.pref#AcquisitionDetails# acquisition details on the biblio detail page."
 msgstr "niteen selkätarrantulostuspainikkeita Tarkat tiedot -näytöllä."
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Don't show"
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Requires XSLTDetailsDisplay and/or OPACXSLTDetailsDisplay system preferences to be active. Works on MARC21. "
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Show"
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Technical explanation: This enables appending component part records to the bibliographic record data for the XSLT parsing. Component parts need to be indexed in the rcn-index, in which many by default are."
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# component part records in the detailed views. This might cause a performance penalty for records with lots of component part records."
+msgstr ""
 
 # Cataloging > Importing
 msgid "cataloguing.pref#AggressiveMatchOnISBN# When matching on ISBN with the record import tool,"
@@ -1655,8 +1675,8 @@ msgid "circulation.pref#ReservesMaxPickUpDelay# Mark a hold as problematic if it
 msgstr "Merkitse varaus ongelmalliseksi, jos se on ollut voimassa yli"
 
 # Circulation > Holds Policy
-msgid "circulation.pref#ReservesMaxPickUpDelay# days."
-msgstr "päivää."
+msgid "circulation.pref#ReservesMaxPickUpDelay# non-holiday days."
+msgstr ""
 
 # Circulation > Holds Policy
 msgid "circulation.pref#ReservesNeedReturns# Automatically"
@@ -2915,6 +2935,10 @@ msgid "i18n_l10n.pref#dateformat# Format dates like"
 msgstr "Ilmoita päivämäärä muodossa"
 
 # I18N/L10N
+msgid "i18n_l10n.pref#dateformat# dd.mm.yyyy"
+msgstr ""
+
+# I18N/L10N
 msgid "i18n_l10n.pref#dateformat# dd/mm/yyyy"
 msgstr "pp/kk/vvvv"
 
@@ -3161,6 +3185,10 @@ msgstr "Älä sisällytä"
 # OPAC > Appearance
 msgid "opac.pref#COinSinOPACResults# Include"
 msgstr "Sisällytä"
+
+# OPAC > Features
+msgid "opac.pref#CommentModeratorsEmail# The email address where to send a notification (template code COMMENT_CREATED) when a Borrower adds/modifies a review/comment for a Biblio. Set to empty to disable sending email notifications."
+msgstr ""
 
 # OPAC > Appearance
 msgid "opac.pref#DisplayOPACiconsXSLT# Don't show"
@@ -5236,6 +5264,14 @@ msgstr ""
 
 # Tools
 msgid "tools.pref#MaxItemsForBatch# items in a single modification or deletion batch."
+msgstr ""
+
+# Tools
+msgid "tools.pref#claimingFines# Set the fine for the 1st, 2nd and 3rd overdue notifications. Separated by |, eg. <strong>3|3|7</strong>"
+msgstr ""
+
+# Tools
+msgid "tools.pref#claimlettertemplate# The absolute path to the .odt-file used as a template for claim letters. Defaults to $KOHA_PATH/misc/claimlettertemplate.odt"
 msgstr ""
 
 # Web services
