--- a/misc/translator/po/tr-TR-pref.po
+++ b/misc/translator/po/tr-TR-pref.po
@@ -570,6 +570,26 @@ msgstr "Gösterme"
 msgid "cataloguing.pref#AcquisitionDetails# acquisition details on the biblio detail page."
 msgstr "bibliyo bilgileri sayfasındaki sağlama ayrıntıları."
 
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Don't show"
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Requires XSLTDetailsDisplay and/or OPACXSLTDetailsDisplay system preferences to be active. Works on MARC21. "
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Show"
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# Technical explanation: This enables appending component part records to the bibliographic record data for the XSLT parsing. Component parts need to be indexed in the rcn-index, in which many by default are."
+msgstr ""
+
+# Cataloging > Display
+msgid "cataloguing.pref#AddComponentPartRecordsToDetailedViews# component part records in the detailed views. This might cause a performance penalty for records with lots of component part records."
+msgstr ""
+
 # Cataloging > Importing
 msgid "cataloguing.pref#AggressiveMatchOnISBN# When matching on ISBN with the record import tool,"
 msgstr "ISBN üzerinde kayıt içe aktarma aracı ile eşleştirildiğinde,"
@@ -1659,8 +1679,8 @@ msgid "circulation.pref#ReservesMaxPickUpDelay# Mark a hold as problematic if it
 msgstr "Bir ayırma daha fazla beklemekteyse problemli olarak işaretle"
 
 # Circulation > Holds Policy
-msgid "circulation.pref#ReservesMaxPickUpDelay# days."
-msgstr "günler."
+msgid "circulation.pref#ReservesMaxPickUpDelay# non-holiday days."
+msgstr ""
 
 # Circulation > Holds Policy
 msgid "circulation.pref#ReservesNeedReturns# Automatically"
@@ -2919,6 +2939,10 @@ msgid "i18n_l10n.pref#dateformat# Format dates like"
 msgstr "Tarihleri şu şekilde biçimlendiriniz"
 
 # I18N/L10N
+msgid "i18n_l10n.pref#dateformat# dd.mm.yyyy"
+msgstr ""
+
+# I18N/L10N
 msgid "i18n_l10n.pref#dateformat# dd/mm/yyyy"
 msgstr "gg/aa/yyyy"
 
@@ -3165,6 +3189,10 @@ msgstr "Dahil etme"
 # OPAC > Appearance
 msgid "opac.pref#COinSinOPACResults# Include"
 msgstr "Dahil et"
+
+# OPAC > Features
+msgid "opac.pref#CommentModeratorsEmail# The email address where to send a notification (template code COMMENT_CREATED) when a Borrower adds/modifies a review/comment for a Biblio. Set to empty to disable sending email notifications."
+msgstr ""
 
 # OPAC > Appearance
 msgid "opac.pref#DisplayOPACiconsXSLT# Don't show"
@@ -5241,6 +5269,14 @@ msgstr "Süreci için"
 # Tools
 msgid "tools.pref#MaxItemsForBatch# items in a single modification or deletion batch."
 msgstr "Tek modifikasyon içindeki yada toplu silme içerisindeki materyaller."
+
+# Tools
+msgid "tools.pref#claimingFines# Set the fine for the 1st, 2nd and 3rd overdue notifications. Separated by |, eg. <strong>3|3|7</strong>"
+msgstr ""
+
+# Tools
+msgid "tools.pref#claimlettertemplate# The absolute path to the .odt-file used as a template for claim letters. Defaults to $KOHA_PATH/misc/claimlettertemplate.odt"
+msgstr ""
 
 # Web services
 msgid "web_services.pref"
